--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,8 +11,9 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>It uses data from mapbox.com and darksky.net</p>>
+        <img class="portrait" src="/img/cobra.jpg">
     </div>
-    <img class="portrait" src="/img/cobra.jpg">
     {{>footer}}
 </body>
 
